Fix zip code alignment

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -131,7 +131,7 @@ header img {
 .textbox-input-medium {
     font-size: large;
     height: 20px;
-    width: 120px;
+    width: 115px;
 }
 .textbox-input-short {
     font-size: large;
